--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,19 @@
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".activity.App"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.DrawerActivity"></activity>
+        <activity android:name=".activity.DrawerActivity" />
+        <activity android:name=".activity.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.GetStartedActivity"
+            android:windowSoftInputMode="adjustPan"/>
     </application>
 
 </manifest>
