--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="apps.ahqmrf.triplem">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".activity.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_app"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".activity.App"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.DrawerActivity" />
         <activity android:name=".activity.SplashActivity">
@@ -21,8 +21,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.HomeActivity" />
-        <activity android:name=".activity.GetStartedActivity"
-            android:windowSoftInputMode="adjustPan"/>
+        <activity
+            android:name=".activity.GetStartedActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.CreateMemoryActivity"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
